syntax = "proto3";

package admin.v1;

import "buf/validate/validate.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
//import "google/protobuf/timestamp.proto";
//import "validate/validate.proto"; use buf first
option go_package = "github.com/fzf-labs/ai-boilerplate-backend/api/admin/v1;v1";

//短信模板
service SmsTemplate {
  //短信模板-创建一条数据
  rpc CreateSmsTemplate(CreateSmsTemplateReq) returns (CreateSmsTemplateReply) {
    option (google.api.http) = {
      post: "/admin/v1/sms_template/create"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      parameters: {
        headers: {
          name: "Authorization"
          description: "Bearer Token"
          type: STRING
          required: true
        }
      }
    };
  }
  //短信模板-更新一条数据
  rpc UpdateSmsTemplate(UpdateSmsTemplateReq) returns (UpdateSmsTemplateReply) {
    option (google.api.http) = {
      post: "/admin/v1/sms_template/update"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      parameters: {
        headers: {
          name: "Authorization"
          description: "Bearer Token"
          type: STRING
          required: true
        }
      }
    };
  }
  //短信模板-更新状态
  rpc UpdateSmsTemplateStatus(UpdateSmsTemplateStatusReq) returns (UpdateSmsTemplateStatusReply) {
    option (google.api.http) = {
      post: "/admin/v1/sms_template/update/status"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      parameters: {
        headers: {
          name: "Authorization"
          description: "Bearer Token"
          type: STRING
          required: true
        }
      }
    };
  }
  //短信模板-删除一条数据
  rpc DeleteSmsTemplate(DeleteSmsTemplateReq) returns (DeleteSmsTemplateReply) {
    option (google.api.http) = {
      post: "/admin/v1/sms_template/delete"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      parameters: {
        headers: {
          name: "Authorization"
          description: "Bearer Token"
          type: STRING
          required: true
        }
      }
    };
  }
  //短信模板-单条数据查询
  rpc GetSmsTemplateInfo(GetSmsTemplateInfoReq) returns (GetSmsTemplateInfoReply) {
    option (google.api.http) = {get: "/admin/v1/sms_template/info"};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      parameters: {
        headers: {
          name: "Authorization"
          description: "Bearer Token"
          type: STRING
          required: true
        }
      }
    };
  }
  //短信模板-列表数据查询
  rpc GetSmsTemplateList(GetSmsTemplateListReq) returns (GetSmsTemplateListReply) {
    option (google.api.http) = {get: "/admin/v1/sms_template/list"};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      parameters: {
        headers: {
          name: "Authorization"
          description: "Bearer Token"
          type: STRING
          required: true
        }
      }
    };
  }
}
//短信模板信息
message SmsTemplateInfo {
  string id = 1; // id
	string smsChannelId = 2; // 短信渠道编号
	int32 templateType = 3; // 模板类型
	string templateCode = 4; // 模板编码
	string templateName = 5; // 模板名称
	string templateContent = 6; // 模板内容
	string templateParams = 7; // 模板参数
	string remark = 8; // 备注
	string APITemplateID = 9; // 短信供应商的模板编号
	int32 status = 10; // 状态(-1禁用,1开启)
	string createdAt = 11; // 创建时间
	string updatedAt = 12; // 更新时间
}

//请求-短信模板-创建一条数据
message CreateSmsTemplateReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: ["smsChannelId","templateType","templateCode","templateName","templateContent","APITemplateID","status"]
    }
  };
  string smsChannelId = 1 [(buf.validate.field).string={min_len: 1, max_len: 64}]; // 短信渠道编号
	int32 templateType = 2 ; // 模板类型
	string templateCode = 3 [(buf.validate.field).string={min_len: 1, max_len: 64}]; // 模板编码
	string templateName = 4 [(buf.validate.field).string={min_len: 1, max_len: 64}]; // 模板名称
	string templateContent = 5 [(buf.validate.field).string={min_len: 1, max_len: 500}]; // 模板内容
	string templateParams = 6 [(buf.validate.field).ignore=IGNORE_IF_UNPOPULATED,(buf.validate.field).string={min_len: 1}]; // 模板参数
	string remark = 7 [(buf.validate.field).ignore=IGNORE_IF_UNPOPULATED,(buf.validate.field).string={min_len: 1, max_len: 255}]; // 备注
	string APITemplateID = 8 [(buf.validate.field).string={min_len: 1, max_len: 64}]; // 短信供应商的模板编号
	int32 status = 9 ; // 状态(-1禁用,1开启)
}

//响应-短信模板-创建一条数据
message CreateSmsTemplateReply {
  	string id = 1; // id
}

//请求-短信模板-更新一条数据
message UpdateSmsTemplateReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: ["id","smsChannelId","templateType","templateCode","templateName","templateContent","APITemplateID","status"]
    }
  };
  string id = 1 [(buf.validate.field).string={min_len: 1, max_len: 128}]; // id
	string smsChannelId = 2 [(buf.validate.field).string={min_len: 1, max_len: 64}]; // 短信渠道编号
	int32 templateType = 3 ; // 模板类型
	string templateCode = 4 [(buf.validate.field).string={min_len: 1, max_len: 64}]; // 模板编码
	string templateName = 5 [(buf.validate.field).string={min_len: 1, max_len: 64}]; // 模板名称
	string templateContent = 6 [(buf.validate.field).string={min_len: 1, max_len: 500}]; // 模板内容
	string templateParams = 7 [(buf.validate.field).ignore=IGNORE_IF_UNPOPULATED,(buf.validate.field).string={min_len: 1}]; // 模板参数
	string remark = 8 [(buf.validate.field).ignore=IGNORE_IF_UNPOPULATED,(buf.validate.field).string={min_len: 1, max_len: 255}]; // 备注
	string APITemplateID = 9 [(buf.validate.field).string={min_len: 1, max_len: 64}]; // 短信供应商的模板编号
	int32 status = 10 ; // 状态(-1禁用,1开启)
}

//响应-短信模板-更新一条数据
message UpdateSmsTemplateReply {}

//请求-短信模板-更新状态
message UpdateSmsTemplateStatusReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: ["id","status"]
    }
  };
  string id = 1 [(buf.validate.field).string={min_len: 1, max_len: 128}]; // id
	int32 status = 2 ; // 状态(-1禁用,1开启)
}

//响应-短信模板-更新状态
message UpdateSmsTemplateStatusReply {}

//请求-短信模板-删除一条数据
message DeleteSmsTemplateReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: ["id"]
    }
  };
  string id = 1 [(buf.validate.field).string={min_len: 1, max_len: 128}]; // id
}

//响应-短信模板-删除一条数据
message DeleteSmsTemplateReply {}

//请求-短信模板-单条数据查询
message GetSmsTemplateInfoReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: ["id"]
    }
  };
  string id = 1 [(buf.validate.field).string={min_len: 1, max_len: 128}]; // id
}

//响应-短信模板-单条数据查询
message GetSmsTemplateInfoReply {
  SmsTemplateInfo info = 1;
}

//请求-短信模板-列表数据查询
message GetSmsTemplateListReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: [
        "page",
        "pageSize"
      ]
    }
  };
  int32 page = 1[(buf.validate.field).int32={gte: 1}]; //页码
  int32 pageSize = 2[(buf.validate.field).int32={gte: 1, lte: 1000}]; //页数
}

//响应-短信模板-列表数据查询
message GetSmsTemplateListReply {
  int32 total = 1; //总数
  repeated SmsTemplateInfo list = 2; // 列表数据
}

